--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 3030
+  port: 9999
 spring:
   main:
     allow-bean-definition-overriding: true
@@ -8,21 +8,41 @@ spring:
   temporal:
     namespace: default
     connection:
-      target: 127.0.0.1:7233
-    # (Note following configuration are not set by default but serve more as reference)
-    #    workers:
-    #      - task-queue: DemoTaskQueue
-    #        capacity:
-    #          max-concurrent-workflow-task-pollers: 6
-    #          max-concurrent-activity-task-pollers: 6
-    #        rate-limits:
-    #          max-worker-activities-per-second: 3
-    #          max-task-queue-activities-per-second: 3
-    #    workflow-cache:
-    #      max-instances: 10
-    #      max-threads: 10
-    workersAutoDiscovery:
-      packages: io.temporal.replaydemo.workers
+      #change this before moving to docker deployment
+      target: host.docker.internal:7233
+    workers:
+      - task-queue: TradeQueue
+          # name: your-worker-name # unique name of the Worker. If not specified, Task Queue is used as the Worker name.
+        workflow-classes:
+          - io.temporal.replaydemo.business.workflows.TradeProcessingImpl
+        activity-beans:
+          - ProcessingActivities
+        capacity:
+          max-concurrent-workflow-task-executors: 1
+          max-concurrent-activity-executors: 1
+          max-concurrent-workflow-task-pollers: 1
+          max-concurrent-activity-task-pollers: 1
+        rate-limits:
+          max-worker-activities-per-second: 5.0
+          max-task-queue-activities-per-second: 5.0
+    workflow-cache:
+#      max-instances: 10
+      max-threads: 10
+#    workersAutoDiscovery:
+#      packages: io.temporal.replaydemo.workers
+  datasource:
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
+    username: sa
+    password: pass
+    driver-class-name: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    defer-datasource-initialization: true
+  h2:
+    console:
+      enabled: true
 # actuator (sdk metrics)
 management:
   endpoint:
