--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.temporal</groupId>
-	<artifactId>replaydemo</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<artifactId>replaydemo-workers</artifactId>
+	<version>1.0.0</version>
 	<name>Temporal Replay 2023 Demo</name>
-	<description>Temporal Replay 2023 Demo</description>
+	<description>Temporal Replay 2023 Demo :: Workers</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -28,10 +28,20 @@
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- Temporal Java SDK -->
