--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
     workers:
       - task-queue: DemoTaskQueue
         workflow-classes:
-          - io.temporal.replaydemo.business.workflows.DemoWorkflowOneImpl
+          - io.temporal.replaydemo.business.workflows.DemoOneWorkflowImpl
         activity-beans:
           - DemoOneActivities
         capacity:
