--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -31,6 +31,8 @@ spring:
       max-threads: 20
 #    workersAutoDiscovery:
 #      packages: io.temporal.replaydemo.workers
+    test-server:
+      enabled: true
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
     username: sa
